--- a/FrontEnd/src/main/resources/MessagesBundle.properties
+++ b/FrontEnd/src/main/resources/MessagesBundle.properties
@@ -13,3 +13,5 @@ msg.the_stacktrace_was=the_stacktrace_was
 
 msg.transform=transform
 msg.click_or_drop_to_select_file=click_or_drop_to_select_file
+
+msg.extend_twine_xml_transform_failed_exception=extend_twine_xml_transform_failed_exception
