--- a/FrontEnd/src/main/resources/MessagesBundle_en_US.properties
+++ b/FrontEnd/src/main/resources/MessagesBundle_en_US.properties
@@ -13,3 +13,5 @@ msg.select_a_different_file=Do you want to select a different file and try again
 
 msg.transform=Transform
 msg.click_or_drop_to_select_file=Click and select or drop a published Twine story...
+
+msg.extend_twine_xml_transform_failed_exception=Input could not be transformed to Extended Twine format.
